--- a/client01-test.properties
+++ b/client01-test.properties
@@ -1,5 +1,5 @@
 server.port = 9000
-test.name = client01_modify111
+test.name = client01_modify
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
